runtime/grammars/sources/tsq/test/corpus/test_query_errors_on_invalid_predicates.txt
================================================================================
Capture with no node
================================================================================

((identifier) @id (@id))

--------------------------------------------------------------------------------

(query
  (pattern
    pattern: (group
      (pattern
        pattern: (named_node
          (node_name))
        (capture))
      (pattern
        pattern: (group
          (pattern
            pattern: (wildcard_node
              (MISSING "_"))
            (capture)))))))
